--- a/tests/test_cases/2022/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2022/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -18,14 +18,10 @@ test_cases:
     KIA_TP_FR: 0
     KIA_TP_FR_PRE21: 0
     KIA_TP_RL: 0
-    KIA_TP_RL_PRE21: 0
     KIA_TP_RR: 0.4
-    KIA_TP_RR_PRE21: 0
     KIA_TT_FL: -50
     KIA_TT_FR: -50
-    KIA_TT_FR_PRE21: -50
     KIA_TT_RL: -48
-    KIA_TT_RL_PRE21: -50
     KIA_TT_RR: 201
     KIA_TT_RR_PRE21: -50
     KIA_TW_FL: 1
@@ -57,10 +53,8 @@ test_cases:
     KIA_TP_RL: 0
     KIA_TP_RL_PRE21: 38
     KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 0
     KIA_TT_FL: -50
     KIA_TT_FR: -50
-    KIA_TT_FR_PRE21: -50
     KIA_TT_RL: -48
     KIA_TT_RL_PRE21: 46
     KIA_TT_RR: 201
@@ -97,7 +91,6 @@ test_cases:
     KIA_TP_RR_PRE21: 35.6
     KIA_TT_FL: -50
     KIA_TT_FR: -50
-    KIA_TT_FR_PRE21: -50
     KIA_TT_RL: -50
     KIA_TT_RL_PRE21: 32
     KIA_TT_RR: 201
@@ -134,7 +127,6 @@ test_cases:
     KIA_TP_RR_PRE21: 37.6
     KIA_TT_FL: -50
     KIA_TT_FR: -50
-    KIA_TT_FR_PRE21: -50
     KIA_TT_RL: -50
     KIA_TT_RL_PRE21: 45
     KIA_TT_RR: 201
@@ -167,14 +159,12 @@ test_cases:
     KIA_TP_FR: 15.2
     KIA_TP_FR_PRE21: 35.8
     KIA_TP_RL: 0.8
-    KIA_TP_RL_PRE21: 0
     KIA_TP_RR: 0.4
     KIA_TP_RR_PRE21: 34.8
     KIA_TT_FL: -50
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 26
     KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: -50
     KIA_TT_RR: 201
     KIA_TT_RR_PRE21: 27
     KIA_TW_FL: 1
@@ -206,7 +196,6 @@ test_cases:
     KIA_TP_RL: 0
     KIA_TP_RL_PRE21: 35
     KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 0
     KIA_TT_FL: -50
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 29
@@ -242,14 +231,11 @@ test_cases:
     KIA_TP_FR: 17.8
     KIA_TP_FR_PRE21: 38.4
     KIA_TP_RL: 0
-    KIA_TP_RL_PRE21: 0
     KIA_TP_RR: 0.4
-    KIA_TP_RR_PRE21: 0
     KIA_TT_FL: -50
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 39
     KIA_TT_RL: -48
-    KIA_TT_RL_PRE21: -50
     KIA_TT_RR: 201
     KIA_TT_RR_PRE21: -50
     KIA_TW_FL: 1
@@ -275,6 +261,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 27
+    KIA_TP_FL_PRE21: 27
     KIA_TP_FR: 15.6
     KIA_TP_FR_PRE21: 35.8
     KIA_TP_RL: 0.8
@@ -282,6 +269,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 34.8
     KIA_TT_FL: 29
+    KIA_TT_FL_PRE21: 29
     KIA_TT_FR: -45
     KIA_TT_FR_PRE21: 28
     KIA_TT_RL: -50
@@ -311,15 +299,15 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 2
     KIA_TP_FL: 28.2
+    KIA_TP_FL_PRE21: 28.2
     KIA_TP_FR: 0
     KIA_TP_FR_PRE21: 0
     KIA_TP_RL: 0
     KIA_TP_RL_PRE21: 35.6
     KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 0
     KIA_TT_FL: 33
+    KIA_TT_FL_PRE21: 33
     KIA_TT_FR: -50
-    KIA_TT_FR_PRE21: -50
     KIA_TT_RL: -48
     KIA_TT_RL_PRE21: 32
     KIA_TT_RR: 201
@@ -347,6 +335,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 28.2
+    KIA_TP_FL_PRE21: 28.2
     KIA_TP_FR: 17
     KIA_TP_FR_PRE21: 37.6
     KIA_TP_RL: 1.2
@@ -354,6 +343,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 35.8
     KIA_TT_FL: 36
+    KIA_TT_FL_PRE21: 36
     KIA_TT_FR: -45
     KIA_TT_FR_PRE21: 35
     KIA_TT_RL: -50
@@ -383,6 +373,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 28.6
+    KIA_TP_FL_PRE21: 28.6
     KIA_TP_FR: 17
     KIA_TP_FR_PRE21: 37.4
     KIA_TP_RL: 1.2
@@ -390,6 +381,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 35.8
     KIA_TT_FL: 37
+    KIA_TT_FL_PRE21: 37
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 35
     KIA_TT_RL: -50
@@ -419,6 +411,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 31.8
+    KIA_TP_FL_PRE21: 31.8
     KIA_TP_FR: 18.6
     KIA_TP_FR_PRE21: 39.4
     KIA_TP_RL: 0.8
@@ -426,6 +419,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 38.4
     KIA_TT_FL: 46
+    KIA_TT_FL_PRE21: 46
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 43
     KIA_TT_RL: -50
@@ -455,6 +449,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 32.2
+    KIA_TP_FL_PRE21: 32.2
     KIA_TP_FR: 20.2
     KIA_TP_FR_PRE21: 41.4
     KIA_TP_RL: 1.2
@@ -462,6 +457,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 39.4
     KIA_TT_FL: 54
+    KIA_TT_FL_PRE21: 54
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 51
     KIA_TT_RL: -50
@@ -491,6 +487,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 33.6
+    KIA_TP_FL_PRE21: 33.6
     KIA_TP_FR: 20.2
     KIA_TP_FR_PRE21: 41.4
     KIA_TP_RL: 1.2
@@ -498,6 +495,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 40
     KIA_TT_FL: 52
+    KIA_TT_FL_PRE21: 52
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 51
     KIA_TT_RL: -50
@@ -527,6 +525,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 38.4
+    KIA_TP_FL_PRE21: 38.4
     KIA_TP_FR: 18.6
     KIA_TP_FR_PRE21: 36.8
     KIA_TP_RL: 0.8
@@ -534,6 +533,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 38
     KIA_TT_FL: 45
+    KIA_TT_FL_PRE21: 45
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 43
     KIA_TT_RL: -50
@@ -563,6 +563,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 40
+    KIA_TP_FL_PRE21: 40
     KIA_TP_FR: 21
     KIA_TP_FR_PRE21: 38.6
     KIA_TP_RL: 1.2
@@ -570,6 +571,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 39.6
     KIA_TT_FL: 58
+    KIA_TT_FL_PRE21: 58
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 55
     KIA_TT_RL: -50
@@ -599,6 +601,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 40.8
+    KIA_TP_FL_PRE21: 40.8
     KIA_TP_FR: 21
     KIA_TP_FR_PRE21: 38.6
     KIA_TP_RL: 1.2
@@ -606,6 +609,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 40.8
     KIA_TT_FL: 57
+    KIA_TT_FL_PRE21: 57
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 55
     KIA_TT_RL: -50
