--- a/tests/test_cases/2023/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22E021.yaml
@@ -1,10 +1,14 @@
 command_id: 7E0.7E8.22E021
 test_cases:
 - expected_values:
+    KIA_TB_PRES: 93.40641
     KIA_TURBO_BOOST: 1.54808
     KIA_WG_DUTY: 23.77966
+    KIA_WG_POS: 5.32837
     KIA_WG_POSITION: 5.32845
     KIA_WG_SETPOINT: 94.33738
+    KIA_WG_SP: 94.33601
+    KIA_WG_V: 3.66211
     KIA_WG_VOLTAGE: 3.66217
   response: |-
     7E8104562E021FE9FC6
@@ -18,10 +22,14 @@ test_cases:
     7E8287003693C603C00
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 93.56394
     KIA_TURBO_BOOST: 1.57093
     KIA_WG_DUTY: 59.60479
+    KIA_WG_POS: 12.4878
     KIA_WG_POSITION: 12.48798
     KIA_WG_SETPOINT: 25.16518
+    KIA_WG_SP: 25.16481
+    KIA_WG_V: 3.6377
     KIA_WG_VOLTAGE: 3.63775
   response: |-
     7E8104562E021FE9FC6
@@ -35,10 +43,14 @@ test_cases:
     7E8284B07FE101B1100
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 93.56394
     KIA_TURBO_BOOST: 1.57093
     KIA_WG_DUTY: 71.4641
+    KIA_WG_POS: 8.61817
     KIA_WG_POSITION: 8.6183
     KIA_WG_SETPOINT: 1.75174
+    KIA_WG_SP: 1.75171
+    KIA_WG_V: 3.65723
     KIA_WG_VOLTAGE: 3.65728
   response: |-
     7E8104562E021FE9FC6
@@ -52,10 +64,14 @@ test_cases:
     7E828790584011F0200
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 93.58052
     KIA_TURBO_BOOST: 1.57333
     KIA_WG_DUTY: 33.31044
+    KIA_WG_POS: 13.18971
     KIA_WG_POSITION: 13.1899
     KIA_WG_SETPOINT: 76.91157
+    KIA_WG_SP: 76.91046
+    KIA_WG_V: 3.69141
     KIA_WG_VOLTAGE: 3.69146
   response: |-
     7E8104562E021FE9FC6
@@ -69,10 +85,14 @@ test_cases:
     7E828A3087131393100
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 95.37966
     KIA_TURBO_BOOST: 1.83429
     KIA_WG_DUTY: 28.45197
+    KIA_WG_POS: 17.60255
     KIA_WG_POSITION: 17.60281
     KIA_WG_SETPOINT: 86.37827
+    KIA_WG_SP: 86.37702
+    KIA_WG_V: 3.6377
     KIA_WG_VOLTAGE: 3.63775
   response: |-
     7E8104562E021FE9FC6
@@ -86,10 +106,14 @@ test_cases:
     7E8286B0B4437483700
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 95.41283
     KIA_TURBO_BOOST: 1.8391
     KIA_WG_DUTY: 61.36873
+    KIA_WG_POS: 4.23584
     KIA_WG_POSITION: 4.2359
     KIA_WG_SETPOINT: 24.62806
+    KIA_WG_SP: 24.6277
+    KIA_WG_V: 3.68164
     KIA_WG_VOLTAGE: 3.6817
   response: |-
     7E8104562E021FE9FC6
@@ -103,10 +127,14 @@ test_cases:
     7E8288D02B60FC30F00
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 95.42112
     KIA_TURBO_BOOST: 1.8403
     KIA_WG_DUTY: 64.99428
+    KIA_WG_POS: 399.62187
     KIA_WG_POSITION: 399.62768
     KIA_WG_SETPOINT: 16.60792
+    KIA_WG_SP: 16.60768
+    KIA_WG_V: 3.68653
     KIA_WG_VOLTAGE: 3.68658
   response: |-
     7E8104562E021FE9FC6
@@ -120,10 +148,14 @@ test_cases:
     7E82831FFC20AA10A00
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 96.25022
     KIA_TURBO_BOOST: 1.96056
     KIA_WG_DUTY: 70.06332
+    KIA_WG_POS: 13.98927
     KIA_WG_POSITION: 13.98947
     KIA_WG_SETPOINT: 7.55627
+    KIA_WG_SP: 7.55616
+    KIA_WG_V: 3.69141
     KIA_WG_VOLTAGE: 3.69146
   response: |-
     7E8104562E021FE9FC6
@@ -137,10 +169,14 @@ test_cases:
     7E828AE08F404D60400
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 106.80466
     KIA_TURBO_BOOST: 3.49142
     KIA_WG_DUTY: 74.14054
+    KIA_WG_POS: 329.71215
     KIA_WG_POSITION: 329.71695
     KIA_WG_SETPOINT: 0
+    KIA_WG_SP: 0
+    KIA_WG_V: 3.67188
     KIA_WG_VOLTAGE: 3.67193
   response: |-
     7E8104562E021FE9FC6
@@ -154,10 +190,14 @@ test_cases:
     7E828E6D30400000000
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 93.63855
     KIA_TURBO_BOOST: 1.58175
     KIA_WG_DUTY: 25.50393
+    KIA_WG_POS: 5.28565
     KIA_WG_POSITION: 5.28573
     KIA_WG_SETPOINT: 92.98848
+    KIA_WG_SP: 92.98713
+    KIA_WG_V: 3.70117
     KIA_WG_VOLTAGE: 3.70123
   response: |-
     7E8104562E021FE9FC6
@@ -171,10 +211,14 @@ test_cases:
     7E828A503623B833B00
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 93.64684
     KIA_TURBO_BOOST: 1.58295
     KIA_WG_DUTY: 37.73556
+    KIA_WG_POS: 20.88625
     KIA_WG_POSITION: 20.88655
     KIA_WG_SETPOINT: 69.49569
+    KIA_WG_SP: 69.49468
+    KIA_WG_V: 3.67188
     KIA_WG_VOLTAGE: 3.67193
   response: |-
     7E8104562E021FE9FC6
@@ -188,10 +232,14 @@ test_cases:
     7E8284D0D5E2C7A2C00
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 93.68001
     KIA_TURBO_BOOST: 1.58777
     KIA_WG_DUTY: 33.02052
+    KIA_WG_POS: 23.0652
     KIA_WG_POSITION: 23.06554
     KIA_WG_SETPOINT: 76.69184
+    KIA_WG_SP: 76.69073
+    KIA_WG_V: 3.63282
     KIA_WG_VOLTAGE: 3.63287
   response: |-
     7E8104562E021FE9FC6
@@ -205,10 +253,14 @@ test_cases:
     7E828440EC331153200
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 93.6883
     KIA_TURBO_BOOST: 1.58897
     KIA_WG_DUTY: 71.09483
+    KIA_WG_POS: 0.39673
     KIA_WG_POSITION: 0.39673
     KIA_WG_SETPOINT: 3.12505
+    KIA_WG_SP: 3.125
+    KIA_WG_V: 3.70117
     KIA_WG_VOLTAGE: 3.70123
   response: |-
     7E8104562E021FE9FC6
@@ -222,10 +274,14 @@ test_cases:
     7E82800004102000000
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 96.48237
     KIA_TURBO_BOOST: 1.99423
     KIA_WG_DUTY: 24.83253
+    KIA_WG_POS: 25.52492
     KIA_WG_POSITION: 25.52529
     KIA_WG_SETPOINT: 94.95384
+    KIA_WG_SP: 94.95246
+    KIA_WG_V: 3.67188
     KIA_WG_VOLTAGE: 3.67193
   response: |-
     7E8104562E021FE9FC6
@@ -239,10 +295,14 @@ test_cases:
     7E828C910563CC53C00
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 158.60683
     KIA_TURBO_BOOST: 11.00504
     KIA_WG_DUTY: 53.69345
+    KIA_WG_POS: 344.10425
     KIA_WG_POSITION: 344.10925
     KIA_WG_SETPOINT: 40.0885
+    KIA_WG_SP: 40.08792
+    KIA_WG_V: 3.68897
     KIA_WG_VOLTAGE: 3.68902
   response: |-
     7E8104562E021FE9FC6
@@ -256,10 +316,14 @@ test_cases:
     7E828BADC3A19A81600
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 93.83754
     KIA_TURBO_BOOST: 1.61061
     KIA_WG_DUTY: 23.94751
+    KIA_WG_POS: 6.85425
     KIA_WG_POSITION: 6.85435
     KIA_WG_SETPOINT: 96.05859
+    KIA_WG_SP: 96.0572
+    KIA_WG_V: 3.70606
     KIA_WG_VOLTAGE: 3.70611
   response: |-
     7E8104562E021FE9FC6
@@ -273,10 +337,14 @@ test_cases:
     7E828A704633D7A3D00
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 93.84583
     KIA_TURBO_BOOST: 1.61182
     KIA_WG_DUTY: 62.65354
+    KIA_WG_POS: 398.41337
     KIA_WG_POSITION: 398.41917
     KIA_WG_SETPOINT: 19.21416
+    KIA_WG_SP: 19.21388
+    KIA_WG_V: 3.64258
     KIA_WG_VOLTAGE: 3.64263
   response: |-
     7E8104562E021FE9FC6
@@ -290,10 +358,14 @@ test_cases:
     7E82832FEFC0C4C0C00
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 94.00336
     KIA_TURBO_BOOST: 1.63467
     KIA_WG_DUTY: 31.11925
+    KIA_WG_POS: 32.70266
     KIA_WG_POSITION: 32.70314
     KIA_WG_SETPOINT: 79.95727
+    KIA_WG_SP: 79.95611
+    KIA_WG_V: 3.64746
     KIA_WG_VOLTAGE: 3.64752
   response: |-
     7E8104562E021FE9FC6
@@ -307,10 +379,14 @@ test_cases:
     7E828D514EE332C3500
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 94.00336
     KIA_TURBO_BOOST: 1.63467
     KIA_WG_DUTY: 23.50805
+    KIA_WG_POS: 10.87647
     KIA_WG_POSITION: 10.87663
     KIA_WG_SETPOINT: 94.32517
+    KIA_WG_SP: 94.3238
+    KIA_WG_V: 3.6377
     KIA_WG_VOLTAGE: 3.63775
   response: |-
     7E8104562E021FE9FC6
@@ -324,10 +400,14 @@ test_cases:
     7E8281706F63C5E3C00
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 99.33447
     KIA_TURBO_BOOST: 2.40791
     KIA_WG_DUTY: 70.42954
+    KIA_WG_POS: 5.56031
     KIA_WG_POSITION: 5.56039
     KIA_WG_SETPOINT: 5.2491
+    KIA_WG_SP: 5.24903
+    KIA_WG_V: 3.6377
     KIA_WG_VOLTAGE: 3.63775
   response: |-
     7E8104562E021FE9FC6
@@ -341,10 +421,14 @@ test_cases:
     7E82826038F035C0300
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 102.80011
     KIA_TURBO_BOOST: 2.91059
     KIA_WG_DUTY: 73.11818
+    KIA_WG_POS: 331.27465
     KIA_WG_POSITION: 331.27947
     KIA_WG_SETPOINT: 0
+    KIA_WG_SP: 0
+    KIA_WG_V: 3.66699
     KIA_WG_VOLTAGE: 3.66705
   response: |-
     7E8104562E021FE9FC6
@@ -358,10 +442,14 @@ test_cases:
     7E82897D40400000000
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 91.51606
     KIA_TURBO_BOOST: 1.2739
     KIA_WG_DUTY: 31.27184
+    KIA_WG_POS: 6.45752
     KIA_WG_POSITION: 6.45762
     KIA_WG_SETPOINT: 81.62356
+    KIA_WG_SP: 81.62237
+    KIA_WG_V: 3.74512
     KIA_WG_VOLTAGE: 3.74517
   response: |-
     7E8104562E021FE9FC6
@@ -375,10 +463,14 @@ test_cases:
     7E828070422343D3400
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 91.51606
     KIA_TURBO_BOOST: 1.2739
     KIA_WG_DUTY: 33.02968
+    KIA_WG_POS: 16.88234
     KIA_WG_POSITION: 16.88258
     KIA_WG_SETPOINT: 79.68261
+    KIA_WG_SP: 79.68145
+    KIA_WG_V: 3.72071
     KIA_WG_VOLTAGE: 3.72076
   response: |-
     7E8104562E021FE9FC6
@@ -392,10 +484,14 @@ test_cases:
     7E828470ACE32FF3200
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 94.31842
     KIA_TURBO_BOOST: 1.68036
     KIA_WG_DUTY: 54.20615
+    KIA_WG_POS: 14.48365
     KIA_WG_POSITION: 14.48386
     KIA_WG_SETPOINT: 34.98589
+    KIA_WG_SP: 34.98538
+    KIA_WG_V: 3.66211
     KIA_WG_VOLTAGE: 3.66217
   response: |-
     7E8104562E021FE9FC6
@@ -409,10 +505,14 @@ test_cases:
     7E82862094516641600
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 94.35158
     KIA_TURBO_BOOST: 1.68517
     KIA_WG_DUTY: 38.83116
+    KIA_WG_POS: 10.94361
     KIA_WG_POSITION: 10.94377
     KIA_WG_SETPOINT: 67.53033
+    KIA_WG_SP: 67.52935
+    KIA_WG_V: 3.69629
     KIA_WG_VOLTAGE: 3.69635
   response: |-
     7E8104562E021FE9FC6
@@ -426,10 +526,14 @@ test_cases:
     7E828B407012B382B00
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 94.74955
     KIA_TURBO_BOOST: 1.7429
     KIA_WG_DUTY: 73.28603
+    KIA_WG_POS: 364.44118
     KIA_WG_POSITION: 364.44648
     KIA_WG_SETPOINT: 2.29496
+    KIA_WG_SP: 2.29492
+    KIA_WG_V: 3.70117
     KIA_WG_VOLTAGE: 3.70123
   response: |-
     7E8104562E021FE9FC6
@@ -443,10 +547,14 @@ test_cases:
     7E828CEE93E01780000
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 123.23742
     KIA_TURBO_BOOST: 5.8749
     KIA_WG_DUTY: 73.11818
+    KIA_WG_POS: 331.27465
     KIA_WG_POSITION: 331.27947
     KIA_WG_SETPOINT: 0
+    KIA_WG_SP: 0
+    KIA_WG_V: 3.64258
     KIA_WG_VOLTAGE: 3.64263
   response: |-
     7E8104562E021FE9FC6
@@ -460,10 +568,14 @@ test_cases:
     7E82897D40400000000
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 124.17431
     KIA_TURBO_BOOST: 6.01079
     KIA_WG_DUTY: 74.14054
+    KIA_WG_POS: 331.22582
     KIA_WG_POSITION: 331.23064
     KIA_WG_SETPOINT: 100
+    KIA_WG_SP: 398.43779
+    KIA_WG_V: 3.69141
     KIA_WG_VOLTAGE: 3.69146
   response: |-
     7E8104562E021FE9FC6
@@ -477,10 +589,14 @@ test_cases:
     7E828E6D3FCFF000000
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 91.87257
     KIA_TURBO_BOOST: 1.32561
     KIA_WG_DUTY: 35.10491
+    KIA_WG_POS: 21.5088
     KIA_WG_POSITION: 21.50912
     KIA_WG_SETPOINT: 74.94011
+    KIA_WG_SP: 74.93902
+    KIA_WG_V: 3.69141
     KIA_WG_VOLTAGE: 3.69146
   response: |-
     7E8104562E021FE9FC6
@@ -494,10 +610,14 @@ test_cases:
     7E828EF0DC42FF62F00
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 91.96377
     KIA_TURBO_BOOST: 1.33883
     KIA_WG_DUTY: 28.64118
+    KIA_WG_POS: 399.87822
     KIA_WG_POSITION: 399.88403
     KIA_WG_SETPOINT: 87.45861
+    KIA_WG_SP: 87.45734
+    KIA_WG_V: 3.68653
     KIA_WG_VOLTAGE: 3.68658
   response: |-
     7E8104562E021FE9FC6
@@ -511,10 +631,14 @@ test_cases:
     7E828A9FFEC37F93700
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 100.33768
     KIA_TURBO_BOOST: 2.55342
     KIA_WG_DUTY: 67.19158
+    KIA_WG_POS: 15.44801
     KIA_WG_POSITION: 15.44823
     KIA_WG_SETPOINT: 9.40566
+    KIA_WG_SP: 9.40552
+    KIA_WG_V: 3.63282
     KIA_WG_VOLTAGE: 3.63287
   response: |-
     7E8104562E021FE9FC6
@@ -528,10 +652,14 @@ test_cases:
     7E8280109E306050700
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 111.67148
     KIA_TURBO_BOOST: 4.19733
     KIA_WG_DUTY: 57.72488
+    KIA_WG_POS: 344.47657
     KIA_WG_POSITION: 344.48157
     KIA_WG_SETPOINT: 30.23117
+    KIA_WG_SP: 30.23073
+    KIA_WG_V: 3.70606
     KIA_WG_VOLTAGE: 3.70611
   response: |-
     7E8104562E021FE9FC6
@@ -545,10 +673,14 @@ test_cases:
     7E828E3DC7713591100
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 115.36926
     KIA_TURBO_BOOST: 4.73367
     KIA_WG_DUTY: 70.85374
+    KIA_WG_POS: 13.63526
     KIA_WG_POSITION: 13.63546
     KIA_WG_SETPOINT: 6.15854
+    KIA_WG_SP: 6.15845
+    KIA_WG_V: 3.64258
     KIA_WG_VOLTAGE: 3.64263
   response: |-
     7E8104562E021FE9FC6
@@ -562,10 +694,14 @@ test_cases:
     7E828B108BA03F10300
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 91.87257
     KIA_TURBO_BOOST: 1.32561
     KIA_WG_DUTY: 31.73266
+    KIA_WG_POS: 37.53054
     KIA_WG_POSITION: 37.53109
     KIA_WG_SETPOINT: 80.62867
+    KIA_WG_SP: 80.6275
+    KIA_WG_V: 3.63282
     KIA_WG_VOLTAGE: 3.63287
   response: |-
     7E8104562E021FE9FC6
@@ -579,10 +715,14 @@ test_cases:
     7E8289E1805339A3700
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 92.18763
     KIA_TURBO_BOOST: 1.3713
     KIA_WG_DUTY: 40.34485
+    KIA_WG_POS: 397.4185
     KIA_WG_POSITION: 397.42428
     KIA_WG_SETPOINT: 64.45411
+    KIA_WG_SP: 64.45317
+    KIA_WG_V: 3.69141
     KIA_WG_VOLTAGE: 3.69146
   response: |-
     7E8104562E021FE9FC6
@@ -596,10 +736,14 @@ test_cases:
     7E828A4FE5929402900
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 92.22908
     KIA_TURBO_BOOST: 1.37732
     KIA_WG_DUTY: 33.72244
+    KIA_WG_POS: 4.07105
     KIA_WG_POSITION: 4.07111
     KIA_WG_SETPOINT: 78.90135
+    KIA_WG_SP: 78.9002
+    KIA_WG_V: 3.76465
     KIA_WG_VOLTAGE: 3.76471
   response: |-
     7E8104562E021FE9FC6
@@ -613,10 +757,14 @@ test_cases:
     7E8282A029B327F3200
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 92.22908
     KIA_TURBO_BOOST: 1.37732
     KIA_WG_DUTY: 39.00511
+    KIA_WG_POS: 394.81229
     KIA_WG_POSITION: 394.81804
     KIA_WG_SETPOINT: 69.19661
+    KIA_WG_SP: 69.19561
+    KIA_WG_V: 3.71582
     KIA_WG_VOLTAGE: 3.71588
   response: |-
     7E8104562E021FE9FC6
@@ -630,10 +778,14 @@ test_cases:
     7E828EDFCAE2C492C00
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 97.62652
     KIA_TURBO_BOOST: 2.16019
     KIA_WG_DUTY: 64.11841
+    KIA_WG_POS: 17.24855
     KIA_WG_POSITION: 17.2488
     KIA_WG_SETPOINT: 18.34134
+    KIA_WG_SP: 18.34108
+    KIA_WG_V: 3.70117
     KIA_WG_VOLTAGE: 3.70123
   response: |-
     7E8104562E021FE9FC6
@@ -647,10 +799,14 @@ test_cases:
     7E828120B0A0BBD0B00
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 100.00604
     KIA_TURBO_BOOST: 2.50532
     KIA_WG_DUTY: 73.4081
+    KIA_WG_POS: 363.83693
     KIA_WG_POSITION: 363.84222
     KIA_WG_SETPOINT: 0.21363
+    KIA_WG_SP: 0.21362
+    KIA_WG_V: 3.6377
     KIA_WG_VOLTAGE: 3.63775
   response: |-
     7E8104562E021FE9FC6
@@ -664,10 +820,14 @@ test_cases:
     7E828F6E8DB00230000
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 101.04242
     KIA_TURBO_BOOST: 2.65564
     KIA_WG_DUTY: 71.24437
+    KIA_WG_POS: 389.36795
     KIA_WG_POSITION: 389.37362
     KIA_WG_SETPOINT: 4.36408
+    KIA_WG_SP: 4.36402
+    KIA_WG_V: 3.70117
     KIA_WG_VOLTAGE: 3.70123
   response: |-
     7E8104562E021FE9FC6
@@ -681,10 +841,14 @@ test_cases:
     7E82831F93202CB0100
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 92.29541
     KIA_TURBO_BOOST: 1.38694
     KIA_WG_DUTY: 71.8761
+    KIA_WG_POS: 1.2207
     KIA_WG_POSITION: 1.22072
     KIA_WG_SETPOINT: 1.56252
+    KIA_WG_SP: 1.5625
+    KIA_WG_V: 3.69141
     KIA_WG_VOLTAGE: 3.69146
   response: |-
     7E8104562E021FE9FC6
@@ -698,10 +862,14 @@ test_cases:
     7E8280000C801000000
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 92.51927
     KIA_TURBO_BOOST: 1.41941
     KIA_WG_DUTY: 34.90043
+    KIA_WG_POS: 19.38478
     KIA_WG_POSITION: 19.38506
     KIA_WG_SETPOINT: 74.73259
+    KIA_WG_SP: 74.7315
+    KIA_WG_V: 3.70117
     KIA_WG_VOLTAGE: 3.70123
   response: |-
     7E8104562E021FE9FC6
@@ -715,10 +883,14 @@ test_cases:
     7E828AC0C682FD42F00
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 101.89639
     KIA_TURBO_BOOST: 2.77951
     KIA_WG_DUTY: 66.19364
+    KIA_WG_POS: 398.12651
     KIA_WG_POSITION: 398.1323
     KIA_WG_SETPOINT: 14.33127
+    KIA_WG_SP: 14.33106
+    KIA_WG_V: 3.69141
     KIA_WG_VOLTAGE: 3.69146
   response: |-
     7E8104562E021FE9FC6
@@ -732,10 +904,14 @@ test_cases:
     7E828BAFECD092C0A00
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 92.90895
     KIA_TURBO_BOOST: 1.47593
     KIA_WG_DUTY: 39.57275
+    KIA_WG_POS: 19.34205
     KIA_WG_POSITION: 19.34234
     KIA_WG_SETPOINT: 65.13161
+    KIA_WG_SP: 65.13066
+    KIA_WG_V: 3.66211
     KIA_WG_VOLTAGE: 3.66217
   response: |-
     7E8104562E021FE9FC6
@@ -749,10 +925,14 @@ test_cases:
     7E828A70C6129AF2900
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 92.96698
     KIA_TURBO_BOOST: 1.48434
     KIA_WG_DUTY: 33.59121
+    KIA_WG_POS: 397.79081
     KIA_WG_POSITION: 397.7966
     KIA_WG_SETPOINT: 77.94919
+    KIA_WG_SP: 77.94805
+    KIA_WG_V: 3.64746
     KIA_WG_VOLTAGE: 3.64752
   response: |-
     7E8104562E021FE9FC6
@@ -766,10 +946,14 @@ test_cases:
     7E828FFFE9631E33000
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 92.99186
     KIA_TURBO_BOOST: 1.48795
     KIA_WG_DUTY: 23.94446
+    KIA_WG_POS: 5.87769
     KIA_WG_POSITION: 5.87778
     KIA_WG_SETPOINT: 94.8867
+    KIA_WG_SP: 94.88532
+    KIA_WG_V: 3.66211
     KIA_WG_VOLTAGE: 3.66217
   response: |-
     7E8104562E021FE9FC6
@@ -783,10 +967,14 @@ test_cases:
     7E828A603C33CBA3C00
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 93.72976
     KIA_TURBO_BOOST: 1.59498
     KIA_WG_DUTY: 55.32616
+    KIA_WG_POS: 395.97807
     KIA_WG_POSITION: 395.98383
     KIA_WG_SETPOINT: 36.54841
+    KIA_WG_SP: 36.54788
+    KIA_WG_V: 3.63282
     KIA_WG_VOLTAGE: 3.63287
   response: |-
     7E8104562E021FE9FC6
@@ -800,10 +988,14 @@ test_cases:
     7E828D1FD6D17641700
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 102.57625
     KIA_TURBO_BOOST: 2.87812
     KIA_WG_DUTY: 71.66552
+    KIA_WG_POS: 13.61085
     KIA_WG_POSITION: 13.61105
     KIA_WG_SETPOINT: 2.05081
+    KIA_WG_SP: 2.05078
+    KIA_WG_V: 3.66699
     KIA_WG_VOLTAGE: 3.66705
   response: |-
     7E8104562E021FE9FC6
