--- a/tests/test_cases/2018/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2018/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -18,14 +18,10 @@ test_cases:
     KIA_TP_FR: 0
     KIA_TP_FR_PRE21: 0
     KIA_TP_RL: 0
-    KIA_TP_RL_PRE21: 0
     KIA_TP_RR: 0.4
-    KIA_TP_RR_PRE21: 0
     KIA_TT_FL: -50
     KIA_TT_FR: -50
-    KIA_TT_FR_PRE21: -50
     KIA_TT_RL: -48
-    KIA_TT_RL_PRE21: -50
     KIA_TT_RR: 201
     KIA_TT_RR_PRE21: -50
     KIA_TW_FL: 1
@@ -56,14 +52,11 @@ test_cases:
     KIA_TP_FR: 16.2
     KIA_TP_FR_PRE21: 44.8
     KIA_TP_RL: 0
-    KIA_TP_RL_PRE21: 0
     KIA_TP_RR: 0.4
-    KIA_TP_RR_PRE21: 0
     KIA_TT_FL: -50
     KIA_TT_FR: -45
     KIA_TT_FR_PRE21: 31
     KIA_TT_RL: -48
-    KIA_TT_RL_PRE21: -50
     KIA_TT_RR: 201
     KIA_TT_RR_PRE21: -50
     KIA_TW_FL: 1
@@ -94,14 +87,11 @@ test_cases:
     KIA_TP_FR: 19.2
     KIA_TP_FR_PRE21: 47.8
     KIA_TP_RL: 0
-    KIA_TP_RL_PRE21: 0
     KIA_TP_RR: 0.4
-    KIA_TP_RR_PRE21: 0
     KIA_TT_FL: -50
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 46
     KIA_TT_RL: -48
-    KIA_TT_RL_PRE21: -50
     KIA_TT_RR: 201
     KIA_TT_RR_PRE21: -50
     KIA_TW_FL: 1
@@ -127,6 +117,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 33.2
+    KIA_TP_FL_PRE21: 33.2
     KIA_TP_FR: 16.4
     KIA_TP_FR_PRE21: 33
     KIA_TP_RL: 0.8
@@ -134,6 +125,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 38.4
     KIA_TT_FL: 33
+    KIA_TT_FL_PRE21: 33
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 32
     KIA_TT_RL: -50
@@ -163,6 +155,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 35
+    KIA_TP_FL_PRE21: 35
     KIA_TP_FR: 18
     KIA_TP_FR_PRE21: 34.8
     KIA_TP_RL: 1.2
@@ -170,6 +163,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 40.4
     KIA_TT_FL: 41
+    KIA_TT_FL_PRE21: 41
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 40
     KIA_TT_RL: -50
@@ -199,6 +193,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 35
+    KIA_TP_FL_PRE21: 35
     KIA_TP_FR: 18.2
     KIA_TP_FR_PRE21: 35
     KIA_TP_RL: 1.2
@@ -206,6 +201,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 40.4
     KIA_TT_FL: 41
+    KIA_TT_FL_PRE21: 41
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 41
     KIA_TT_RL: -50
@@ -235,6 +231,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 35
+    KIA_TP_FL_PRE21: 35
     KIA_TP_FR: 18.6
     KIA_TP_FR_PRE21: 34.8
     KIA_TP_RL: 1.2
@@ -242,6 +239,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 40
     KIA_TT_FL: 46
+    KIA_TT_FL_PRE21: 46
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 43
     KIA_TT_RL: -50
@@ -271,6 +269,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 35.4
+    KIA_TP_FL_PRE21: 35.4
     KIA_TP_FR: 18.6
     KIA_TP_FR_PRE21: 35.6
     KIA_TP_RL: 1.2
@@ -278,6 +277,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 40.8
     KIA_TT_FL: 44
+    KIA_TT_FL_PRE21: 44
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 43
     KIA_TT_RL: -50
@@ -307,6 +307,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 35.6
+    KIA_TP_FL_PRE21: 35.6
     KIA_TP_FR: 18.8
     KIA_TP_FR_PRE21: 35.4
     KIA_TP_RL: 1.2
@@ -314,6 +315,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 40.8
     KIA_TT_FL: 45
+    KIA_TT_FL_PRE21: 45
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 44
     KIA_TT_RL: -50
@@ -343,6 +345,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 35.6
+    KIA_TP_FL_PRE21: 35.6
     KIA_TP_FR: 18.8
     KIA_TP_FR_PRE21: 35.4
     KIA_TP_RL: 1.2
@@ -350,6 +353,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 41
     KIA_TT_FL: 46
+    KIA_TT_FL_PRE21: 46
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 44
     KIA_TT_RL: -50
@@ -379,6 +383,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 35.6
+    KIA_TP_FL_PRE21: 35.6
     KIA_TP_FR: 19
     KIA_TP_FR_PRE21: 35.6
     KIA_TP_RL: 1.2
@@ -386,6 +391,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 41
     KIA_TT_FL: 46
+    KIA_TT_FL_PRE21: 46
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 45
     KIA_TT_RL: -50
@@ -415,6 +421,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 35.6
+    KIA_TP_FL_PRE21: 35.6
     KIA_TP_FR: 19.2
     KIA_TP_FR_PRE21: 35.8
     KIA_TP_RL: 1.2
@@ -422,6 +429,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 41.4
     KIA_TT_FL: 47
+    KIA_TT_FL_PRE21: 47
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 46
     KIA_TT_RL: -50
@@ -451,15 +459,15 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 2
     KIA_TP_FL: 35.8
+    KIA_TP_FL_PRE21: 35.8
     KIA_TP_FR: 0
     KIA_TP_FR_PRE21: 0
     KIA_TP_RL: 0
     KIA_TP_RL_PRE21: 33
     KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 0
     KIA_TT_FL: 26
+    KIA_TT_FL_PRE21: 26
     KIA_TT_FR: -50
-    KIA_TT_FR_PRE21: -50
     KIA_TT_RL: -48
     KIA_TT_RL_PRE21: 27
     KIA_TT_RR: 201
@@ -487,6 +495,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 47.6
+    KIA_TP_FL_PRE21: 47.6
     KIA_TP_FR: 19.2
     KIA_TP_FR_PRE21: 48.4
     KIA_TP_RL: 1.2
@@ -494,6 +503,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 49.6
     KIA_TT_FL: 48
+    KIA_TT_FL_PRE21: 48
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 46
     KIA_TT_RL: -50
@@ -523,6 +533,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 47.6
+    KIA_TP_FL_PRE21: 47.6
     KIA_TP_FR: 19.4
     KIA_TP_FR_PRE21: 48.4
     KIA_TP_RL: 1.2
@@ -530,6 +541,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 49.6
     KIA_TT_FL: 48
+    KIA_TT_FL_PRE21: 48
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 47
     KIA_TT_RL: -50
@@ -559,6 +571,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 48.2
+    KIA_TP_FL_PRE21: 48.2
     KIA_TP_FR: 19.2
     KIA_TP_FR_PRE21: 48.8
     KIA_TP_RL: 1.2
@@ -566,6 +579,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 49.6
     KIA_TT_FL: 48
+    KIA_TT_FL_PRE21: 48
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 46
     KIA_TT_RL: -50
@@ -595,6 +609,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 48.2
+    KIA_TP_FL_PRE21: 48.2
     KIA_TP_FR: 19.8
     KIA_TP_FR_PRE21: 48.2
     KIA_TP_RL: 0.8
@@ -602,6 +617,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 48.6
     KIA_TT_FL: 54
+    KIA_TT_FL_PRE21: 54
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 49
     KIA_TT_RL: -50
