--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -53,7 +53,7 @@ supported_commands_by_ecu:
   - 7E0.7E8.22E001:KIA_EIT,KIA_EOT,KIA_IAT
   - 7E0.7E8.22E004:KIA_22E004,KIA_AUX_SOC,KIA_AUX_SOH
   - 7E0.7E8.22E00A:KIA_KNOCK_LEARN_1,KIA_KNOCK_LEARN_2,KIA_KNOCK_LEARN_3,KIA_KNOCK_LEARN_4,KIA_KNOCK_RETARD_1,KIA_KNOCK_RETARD_2,KIA_KNOCK_RETARD_3,KIA_KNOCK_RETARD_4
-  - 7E0.7E8.22E021:KIA_TURBO_BOOST,KIA_WG_DUTY,KIA_WG_POSITION,KIA_WG_SETPOINT,KIA_WG_VOLTAGE
+  - 7E0.7E8.22E021:KIA_TB_PRES,KIA_TURBO_BOOST,KIA_WG_DUTY,KIA_WG_POS,KIA_WG_POSITION,KIA_WG_SETPOINT,KIA_WG_SP,KIA_WG_V,KIA_WG_VOLTAGE
   "7E1":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0104:LOAD_PCT
@@ -83,11 +83,11 @@ unsupported_commands_by_ecu:
   "7C6":
   - 7C6.7CE.22B002|fc=1:KIA_CLUSTER_VOLTAGE,KIA_FLI_VOL,KIA_ODO_KM,KIA_ODO_MI,KIA_VPWR
   "7D1":
-  - 7D1.7D9.220104:KIA_BRAKE_P_V2,KIA_STEER_ANGLE_V2,KIA_TC_SWITCH_V2,KIA_TIRE_FL_VSS_V2,KIA_TIRE_FR_VSS_V2,KIA_TIRE_RL_VSS_V2,KIA_TIRE_RR_VSS_V2,KIA_VSS_AVG_V2
+  - 7D1.7D9.220104:KIA_BRAKE_P_V2,KIA_STEER_ANGLE_V2_V2,KIA_TC_SWITCH_V2,KIA_TIRE_FL_VSS_V2_V2,KIA_TIRE_FR_VSS_V2_V2,KIA_TIRE_RL_VSS_V2_V2,KIA_TIRE_RR_VSS_V2_V2,KIA_VSS_AVG_V2
   "7D4":
   - 7D4.7DC.220101:KIA_BMS_CHG_PWR,KIA_BMS_DISCHG_PWR,KIA_BMS_MIN_TEMP,KIA_BMS_MOD1_TEMP,KIA_BMS_MOD2_TEMP,KIA_BMS_MOD3_TEMP,KIA_BMS_MOD4_TEMP,KIA_BMS_SOC
   "7E0":
-  - 7E0.7E8.2221A0:KIA_ATF_TEMP
+  - 7E0.2221A0:KIA_ATF_TEMP
   - 7E0.7E8.22ED02:KIA_EOT_V2
   "7E1":
   - 7E1.7E9.0121
