--- a/tests/test_cases/2019/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.22E021.yaml
@@ -1,10 +1,14 @@
 command_id: 7E0.7E8.22E021
 test_cases:
 - expected_values:
+    KIA_TB_PRES: 85.82843
     KIA_TURBO_BOOST: 0.44894
     KIA_WG_DUTY: 69.02266
+    KIA_WG_POS: 381.25027
     KIA_WG_POSITION: 381.25582
     KIA_WG_SETPOINT: 86.56138
+    KIA_WG_SP: 86.56012
+    KIA_WG_V: 1.16699
     KIA_WG_VOLTAGE: 1.16701
   response: |-
     7E8105B62E021FE9FCE
@@ -22,10 +26,14 @@ test_cases:
     7E82CA0218026601C80
     7E82D1CAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 83.366
     KIA_TURBO_BOOST: 0.09178
     KIA_WG_DUTY: 69.27901
+    KIA_WG_POS: 385.74857
     KIA_WG_POSITION: 385.75418
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.16211
     KIA_WG_VOLTAGE: 1.16213
   response: |-
     7E8105B62E021FE9FCE
