--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -8,7 +8,7 @@ supported_commands_by_ecu:
   - 770.778.22BC08:KIA_TURN_L,KIA_TURN_R
   - 770.778.22BC09:KIA_HL_HIGH,KIA_HL_LOW
   "7A0":
-  - 7A0.7A8.22C00B|fc=1:KIA_FL_INVALID,KIA_FR_INVALID,KIA_RL_INVALID,KIA_RR_INVALID,KIA_TB_FL,KIA_TB_FR,KIA_TB_RL,KIA_TB_RR,KIA_TPMS_PRESS_RL,KIA_TPMS_PRESS_RR,KIA_TPMS_TEMP_FL,KIA_TPMS_TEMP_FR,KIA_TPMS_TEMP_RL,KIA_TPMS_TEMP_RR,KIA_TP_FL,KIA_TP_FR,KIA_TP_FR_PRE21,KIA_TP_RL,KIA_TP_RL_PRE21,KIA_TP_RR,KIA_TP_RR_PRE21,KIA_TT_FL,KIA_TT_FR,KIA_TT_FR_PRE21,KIA_TT_RL,KIA_TT_RL_PRE21,KIA_TT_RR,KIA_TT_RR_PRE21,KIA_TW_FL,KIA_TW_FR,KIA_TW_RL,KIA_TW_RR
+  - 7A0.7A8.22C00B|fc=1:KIA_FL_INVALID,KIA_FR_INVALID,KIA_RL_INVALID,KIA_RR_INVALID,KIA_TB_FL,KIA_TB_FR,KIA_TB_RL,KIA_TB_RR,KIA_TPMS_PRESS_RL,KIA_TPMS_PRESS_RR,KIA_TPMS_TEMP_FL,KIA_TPMS_TEMP_FR,KIA_TPMS_TEMP_RL,KIA_TPMS_TEMP_RR,KIA_TP_FL,KIA_TP_FL_PRE21,KIA_TP_FR,KIA_TP_FR_PRE21,KIA_TP_RL,KIA_TP_RL_PRE21,KIA_TP_RR,KIA_TP_RR_PRE21,KIA_TT_FL,KIA_TT_FL_PRE21,KIA_TT_FR,KIA_TT_FR_PRE21,KIA_TT_RL,KIA_TT_RL_PRE21,KIA_TT_RR,KIA_TT_RR_PRE21,KIA_TW_FL,KIA_TW_FR,KIA_TW_RL,KIA_TW_RR
   "7B3":
   - 7B3.7BB.220100|fc=1:KIA_TEMP_EXT,KIA_TEMP_INT,KIA_VSS
   "7C6":
@@ -76,7 +76,7 @@ supported_commands_by_ecu:
   - 7E0.7E8.22E002:KIA_INJ_DUR_1,KIA_INJ_DUR_2,KIA_INJ_DUR_3,KIA_INJ_DUR_4
   - 7E0.7E8.22E004:KIA_22E004,KIA_AUX_SOC,KIA_AUX_SOH
   - 7E0.7E8.22E00A:KIA_KNOCK_LEARN_1,KIA_KNOCK_LEARN_2,KIA_KNOCK_LEARN_3,KIA_KNOCK_LEARN_4,KIA_KNOCK_RETARD_1,KIA_KNOCK_RETARD_2,KIA_KNOCK_RETARD_3,KIA_KNOCK_RETARD_4
-  - 7E0.7E8.22E021:KIA_TURBO_BOOST,KIA_WG_DUTY,KIA_WG_POSITION,KIA_WG_SETPOINT,KIA_WG_VOLTAGE
+  - 7E0.7E8.22E021:KIA_TB_PRES,KIA_TURBO_BOOST,KIA_WG_DUTY,KIA_WG_POS,KIA_WG_POSITION,KIA_WG_SETPOINT,KIA_WG_SP,KIA_WG_V,KIA_WG_VOLTAGE
   "7E1":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0104:LOAD_PCT
@@ -97,14 +97,14 @@ unsupported_commands_by_ecu:
   - 744.74C.22E003|fc=1:KIA_DC_CHRG_TIME,KIA_HVBAT_CHRG_CNT,KIA_HVBAT_DC_CHRGNG,KIA_HVBAT_SOC_VCMS,KIA_HVBAT_TARGET_CURR,KIA_HVBAT_TARGET_VOLT
   "7D1":
   - 7D1.7D9.2101:KIA_BRAKE_P,KIA_FL_VSS,KIA_FR_VSS,KIA_RL_VSS,KIA_RR_VSS,KIA_STEER_ANGLE,KIA_TC_SWITCH,KIA_TIRE_FL_VSS_V1,KIA_TIRE_FR_VSS_V1,KIA_TIRE_RL_VSS_V1,KIA_TIRE_RR_VSS_V1,KIA_VSS_AVG
-  - 7D1.7D9.220104:KIA_BRAKE_P_V2,KIA_STEER_ANGLE_V2,KIA_TC_SWITCH_V2,KIA_TIRE_FL_VSS_V2,KIA_TIRE_FR_VSS_V2,KIA_TIRE_RL_VSS_V2,KIA_TIRE_RR_VSS_V2,KIA_VSS_AVG_V2
+  - 7D1.7D9.220104:KIA_BRAKE_P_V2,KIA_STEER_ANGLE_V2_V2,KIA_TC_SWITCH_V2,KIA_TIRE_FL_VSS_V2_V2,KIA_TIRE_FR_VSS_V2_V2,KIA_TIRE_RL_VSS_V2_V2,KIA_TIRE_RR_VSS_V2_V2,KIA_VSS_AVG_V2
   - 7D1.7D9.224000:KIA_TIRE_FL_VSS,KIA_TIRE_FL_VSS_V2,KIA_TIRE_FR_VSS,KIA_TIRE_FR_VSS_V2,KIA_TIRE_RL_VSS,KIA_TIRE_RL_VSS_V2,KIA_TIRE_RR_VSS,KIA_TIRE_RR_VSS_V2
   "7D4":
   - 7D4.7DC.2101:KIA_STEER_ANGLE_V2
   "7E0":
+  - 7E0.2221A0:KIA_ATF_TEMP
   - 7E0.7D8.2118:KIA_CVVT_T
-  - 7E0.7E8.2101:KIA_MIS_1,KIA_MIS_2,KIA_MIS_3,KIA_MIS_4
-  - 7E0.7E8.2221A0:KIA_ATF_TEMP
+  - 7E0.7E8.2101:KIA_COMMANDED_ENGINE_IDLE_RPM,KIA_CONTROL_MODULE_VOLTAGE,KIA_CONTROL_MODULE_VOLTAGE_AFTER_IGNITION,KIA_COOLANT_T_SENSOR_VOLTAGE,KIA_ENGINE_COOLANT_T,KIA_ENGINE_OIL_T,KIA_ENGINE_RPM,KIA_IAT_SENSOR_VOLTAGE,KIA_INTAKE_AIR_T,KIA_INTAKE_MANIFOLD_ABSOLUTE_PRESSURE,KIA_MAP_SENSOR_VOLTAGE,KIA_MIS_1,KIA_MIS_2,KIA_MIS_3,KIA_MIS_4
   - 7E0.7E8.22ED02:KIA_EOT_V2
   "7E1":
   - 7E1.7E9.21A0:KIA_ATF_T,KIA_GEAR,KIA_VSS_V3
