--- a/tests/test_cases/2021/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2021/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -18,14 +18,10 @@ test_cases:
     KIA_TP_FR: 0
     KIA_TP_FR_PRE21: 0
     KIA_TP_RL: 0
-    KIA_TP_RL_PRE21: 0
     KIA_TP_RR: 0.4
-    KIA_TP_RR_PRE21: 0
     KIA_TT_FL: -50
     KIA_TT_FR: -50
-    KIA_TT_FR_PRE21: -50
     KIA_TT_RL: -48
-    KIA_TT_RL_PRE21: -50
     KIA_TT_RR: 2
     KIA_TT_RR_PRE21: -50
     KIA_TW_FL: 1
@@ -56,14 +52,10 @@ test_cases:
     KIA_TP_FR: 0
     KIA_TP_FR_PRE21: 0
     KIA_TP_RL: 0
-    KIA_TP_RL_PRE21: 0
     KIA_TP_RR: 0.4
-    KIA_TP_RR_PRE21: 0
     KIA_TT_FL: -50
     KIA_TT_FR: -50
-    KIA_TT_FR_PRE21: -50
     KIA_TT_RL: -48
-    KIA_TT_RL_PRE21: -50
     KIA_TT_RR: 14
     KIA_TT_RR_PRE21: -50
     KIA_TW_FL: 1
@@ -95,10 +87,8 @@ test_cases:
     KIA_TP_RL: 0
     KIA_TP_RL_PRE21: 39.6
     KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 0
     KIA_TT_FL: -50
     KIA_TT_FR: -50
-    KIA_TT_FR_PRE21: -50
     KIA_TT_RL: -48
     KIA_TT_RL_PRE21: 10
     KIA_TT_RR: 11
@@ -131,14 +121,12 @@ test_cases:
     KIA_TP_FR: 12.6
     KIA_TP_FR_PRE21: 35.8
     KIA_TP_RL: 0.8
-    KIA_TP_RL_PRE21: 0
     KIA_TP_RR: 0.4
     KIA_TP_RR_PRE21: 39.8
     KIA_TT_FL: -50
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 13
     KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: -50
     KIA_TT_RR: 2
     KIA_TT_RR_PRE21: 13
     KIA_TW_FL: 1
@@ -164,6 +152,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: 56
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 30.8
+    KIA_TP_FL_PRE21: 30.8
     KIA_TP_FR: 11.4
     KIA_TP_FR_PRE21: 35
     KIA_TP_RL: 1
@@ -171,6 +160,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 38.6
     KIA_TT_FL: 8
+    KIA_TT_FL_PRE21: 8
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 7
     KIA_TT_RL: -50
@@ -200,6 +190,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: 56
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 31
+    KIA_TP_FL_PRE21: 31
     KIA_TP_FR: 12
     KIA_TP_FR_PRE21: 34.8
     KIA_TP_RL: 0.8
@@ -207,6 +198,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 38.8
     KIA_TT_FL: 10
+    KIA_TT_FL_PRE21: 10
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 10
     KIA_TT_RL: -50
@@ -236,6 +228,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: 56
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 31.2
+    KIA_TP_FL_PRE21: 31.2
     KIA_TP_FR: 12
     KIA_TP_FR_PRE21: 35.4
     KIA_TP_RL: 0.8
@@ -243,6 +236,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 39.4
     KIA_TT_FL: 11
+    KIA_TT_FL_PRE21: 11
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 10
     KIA_TT_RL: -50
@@ -272,15 +266,15 @@ test_cases:
     KIA_TPMS_TEMP_RL: 57
     KIA_TPMS_TEMP_RR: 2
     KIA_TP_FL: 31.6
+    KIA_TP_FL_PRE21: 31.6
     KIA_TP_FR: 0
     KIA_TP_FR_PRE21: 0
     KIA_TP_RL: 0
     KIA_TP_RL_PRE21: 39.4
     KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 0
     KIA_TT_FL: 9
+    KIA_TT_FL_PRE21: 9
     KIA_TT_FR: -50
-    KIA_TT_FR_PRE21: -50
     KIA_TT_RL: -48
     KIA_TT_RL_PRE21: 9
     KIA_TT_RR: 7
@@ -308,6 +302,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: 54
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 31.8
+    KIA_TP_FL_PRE21: 31.8
     KIA_TP_FR: 11.4
     KIA_TP_FR_PRE21: 35.4
     KIA_TP_RL: 0.8
@@ -315,6 +310,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 39
     KIA_TT_FL: 7
+    KIA_TT_FL_PRE21: 7
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 7
     KIA_TT_RL: -50
@@ -344,6 +340,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: 52
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 32.2
+    KIA_TP_FL_PRE21: 32.2
     KIA_TP_FR: 12.8
     KIA_TP_FR_PRE21: 35.8
     KIA_TP_RL: 0.8
@@ -351,6 +348,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 40
     KIA_TT_FL: 13
+    KIA_TT_FL_PRE21: 13
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 14
     KIA_TT_RL: -50
@@ -380,6 +378,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: 62
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 32.6
+    KIA_TP_FL_PRE21: 32.6
     KIA_TP_FR: 12.8
     KIA_TP_FR_PRE21: 36.4
     KIA_TP_RL: 0.8
@@ -387,6 +386,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 40.4
     KIA_TT_FL: 14
+    KIA_TT_FL_PRE21: 14
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 14
     KIA_TT_RL: -50
@@ -416,6 +416,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: 61
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 33
+    KIA_TP_FL_PRE21: 33
     KIA_TP_FR: 13.4
     KIA_TP_FR_PRE21: 36.8
     KIA_TP_RL: 0.8
@@ -423,6 +424,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 40.6
     KIA_TT_FL: 17
+    KIA_TT_FL_PRE21: 17
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 17
     KIA_TT_RL: -50
@@ -452,6 +454,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: 61
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 33
+    KIA_TP_FL_PRE21: 33
     KIA_TP_FR: 13.4
     KIA_TP_FR_PRE21: 36.8
     KIA_TP_RL: 1.2
@@ -459,6 +462,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 41
     KIA_TT_FL: 18
+    KIA_TT_FL_PRE21: 18
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 17
     KIA_TT_RL: -50
@@ -488,6 +492,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: 57
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 33.2
+    KIA_TP_FL_PRE21: 33.2
     KIA_TP_FR: 13.2
     KIA_TP_FR_PRE21: 36.4
     KIA_TP_RL: 0.8
@@ -495,6 +500,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 40.6
     KIA_TT_FL: 17
+    KIA_TT_FL_PRE21: 17
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 16
     KIA_TT_RL: -50
@@ -524,6 +530,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: 57
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 33.2
+    KIA_TP_FL_PRE21: 33.2
     KIA_TP_FR: 13.4
     KIA_TP_FR_PRE21: 37
     KIA_TP_RL: 0.8
@@ -531,6 +538,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 40.8
     KIA_TT_FL: 17
+    KIA_TT_FL_PRE21: 17
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 17
     KIA_TT_RL: -50
@@ -560,6 +568,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: 66
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 33.8
+    KIA_TP_FL_PRE21: 33.8
     KIA_TP_FR: 14.8
     KIA_TP_FR_PRE21: 37.8
     KIA_TP_RL: 0
@@ -567,6 +576,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 43
     KIA_TT_FL: 24
+    KIA_TT_FL_PRE21: 24
     KIA_TT_FR: -45
     KIA_TT_FR_PRE21: 24
     KIA_TT_RL: -50
@@ -596,6 +606,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: 52
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 35.4
+    KIA_TP_FL_PRE21: 35.4
     KIA_TP_FR: 11
     KIA_TP_FR_PRE21: 35.6
     KIA_TP_RL: 0.8
@@ -603,6 +614,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 38.4
     KIA_TT_FL: 5
+    KIA_TT_FL_PRE21: 5
     KIA_TT_FR: -46
     KIA_TT_FR_PRE21: 5
     KIA_TT_RL: -50
@@ -632,6 +644,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: 79
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 35.8
+    KIA_TP_FL_PRE21: 35.8
     KIA_TP_FR: 18.8
     KIA_TP_FR_PRE21: 35.6
     KIA_TP_RL: 1.2
@@ -639,6 +652,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 37.8
     KIA_TT_FL: 46
+    KIA_TT_FL_PRE21: 46
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 44
     KIA_TT_RL: -50
@@ -668,6 +682,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: 79
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 35.8
+    KIA_TP_FL_PRE21: 35.8
     KIA_TP_FR: 19
     KIA_TP_FR_PRE21: 35.4
     KIA_TP_RL: 1.2
@@ -675,6 +690,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 37.6
     KIA_TT_FL: 47
+    KIA_TT_FL_PRE21: 47
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 45
     KIA_TT_RL: -50
@@ -704,6 +720,7 @@ test_cases:
     KIA_TPMS_TEMP_RL: 79
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 35.8
+    KIA_TP_FL_PRE21: 35.8
     KIA_TP_FR: 19
     KIA_TP_FR_PRE21: 35.4
     KIA_TP_RL: 1.2
@@ -711,6 +728,7 @@ test_cases:
     KIA_TP_RR: 0
     KIA_TP_RR_PRE21: 37.4
     KIA_TT_FL: 48
+    KIA_TT_FL_PRE21: 48
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 45
     KIA_TT_RL: -50
