--- a/tests/test_cases/2021/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22E021.yaml
@@ -1,10 +1,14 @@
 command_id: 7E0.7E8.22E021
 test_cases:
 - expected_values:
+    KIA_TB_PRES: 87.74365
     KIA_TURBO_BOOST: 0.72673
     KIA_WG_DUTY: 69.0837
+    KIA_WG_POS: 6.69556
     KIA_WG_POSITION: 6.69566
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.15234
     KIA_WG_VOLTAGE: 1.15236
   response: |-
     7E8105B62E021FE9FCE
@@ -22,10 +26,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 87.82656
     KIA_TURBO_BOOST: 0.73876
     KIA_WG_DUTY: 69.52926
+    KIA_WG_POS: 3.57056
     KIA_WG_POSITION: 3.57061
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.15234
     KIA_WG_VOLTAGE: 1.15236
   response: |-
     7E8105B62E021FE9FCE
@@ -43,10 +51,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 87.86802
     KIA_TURBO_BOOST: 0.74477
     KIA_WG_DUTY: 73.66445
+    KIA_WG_POS: 399.23735
     KIA_WG_POSITION: 399.24315
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.38672
     KIA_WG_VOLTAGE: 1.38674
   response: |-
     7E8105B62E021FE9FCE
@@ -64,10 +76,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 90.44652
     KIA_TURBO_BOOST: 1.11877
     KIA_WG_DUTY: 71.93103
+    KIA_WG_POS: 0.61035
     KIA_WG_POSITION: 0.61036
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.18164
     KIA_WG_VOLTAGE: 1.18166
   response: |-
     7E8105B62E021FE9FCE
@@ -85,10 +101,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 90.48797
     KIA_TURBO_BOOST: 1.12478
     KIA_WG_DUTY: 72.6421
+    KIA_WG_POS: 396.44804
     KIA_WG_POSITION: 396.4538
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.18164
     KIA_WG_VOLTAGE: 1.18166
   response: |-
     7E8105B62E021FE9FCE
@@ -106,10 +126,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 90.60405
     KIA_TURBO_BOOST: 1.14161
     KIA_WG_DUTY: 68.94636
+    KIA_WG_POS: 397.83964
     KIA_WG_POSITION: 397.84543
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.15723
     KIA_WG_VOLTAGE: 1.15724
   response: |-
     7E8105B62E021FE9FCE
@@ -127,10 +151,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 90.86936
     KIA_TURBO_BOOST: 1.1801
     KIA_WG_DUTY: 72.66041
+    KIA_WG_POS: 0.79956
     KIA_WG_POSITION: 0.79957
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.36231
     KIA_WG_VOLTAGE: 1.36233
   response: |-
     7E8105B62E021FE9FCE
@@ -148,10 +176,14 @@ test_cases:
     7E82CE029202F401D40
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 93.77121
     KIA_TURBO_BOOST: 1.60099
     KIA_WG_DUTY: 68.85481
+    KIA_WG_POS: 5.48706
     KIA_WG_POSITION: 5.48714
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.16699
     KIA_WG_VOLTAGE: 1.16701
   response: |-
     7E8105B62E021FE9FCE
@@ -169,10 +201,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 93.92045
     KIA_TURBO_BOOST: 1.62264
     KIA_WG_DUTY: 69.15694
+    KIA_WG_POS: 399.23735
     KIA_WG_POSITION: 399.24315
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.15723
     KIA_WG_VOLTAGE: 1.15724
   response: |-
     7E8105B62E021FE9FCE
@@ -190,10 +226,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 88.19966
     KIA_TURBO_BOOST: 0.79287
     KIA_WG_DUTY: 68.78767
+    KIA_WG_POS: 0.64087
     KIA_WG_POSITION: 0.64088
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.14258
     KIA_WG_VOLTAGE: 1.1426
   response: |-
     7E8105B62E021FE9FCE
@@ -211,10 +251,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 88.2494
     KIA_TURBO_BOOST: 0.80009
     KIA_WG_DUTY: 74.02152
+    KIA_WG_POS: 5.13306
     KIA_WG_POSITION: 5.13313
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.38184
     KIA_WG_VOLTAGE: 1.38186
   response: |-
     7E8105B62E021FE9FCE
@@ -232,10 +276,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 88.33231
     KIA_TURBO_BOOST: 0.81211
     KIA_WG_DUTY: 69.28511
+    KIA_WG_POS: 0.60425
     KIA_WG_POSITION: 0.60426
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.15723
     KIA_WG_VOLTAGE: 1.15724
   response: |-
     7E8105B62E021FE9FCE
@@ -253,10 +301,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 90.91911
     KIA_TURBO_BOOST: 1.18731
     KIA_WG_DUTY: 69.12947
+    KIA_WG_POS: 2.16675
     KIA_WG_POSITION: 2.16678
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.15234
     KIA_WG_VOLTAGE: 1.15236
   response: |-
     7E8105B62E021FE9FCE
@@ -274,10 +326,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 91.24245
     KIA_TURBO_BOOST: 1.23421
     KIA_WG_DUTY: 73.62478
+    KIA_WG_POS: 389.06278
     KIA_WG_POSITION: 389.06844
     KIA_WG_SETPOINT: 86.56138
+    KIA_WG_SP: 86.56012
+    KIA_WG_V: 1.34277
     KIA_WG_VOLTAGE: 1.34279
   response: |-
     7E8105B62E021FE9FCE
@@ -295,10 +351,14 @@ test_cases:
     7E82CE029202F401D40
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 91.25075
     KIA_TURBO_BOOST: 1.23541
     KIA_WG_DUTY: 69.06233
+    KIA_WG_POS: 393.32304
     KIA_WG_POSITION: 393.32876
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.16699
     KIA_WG_VOLTAGE: 1.16701
   response: |-
     7E8105B62E021FE9FCE
@@ -316,10 +376,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 91.50777
     KIA_TURBO_BOOST: 1.27269
     KIA_WG_DUTY: 68.79988
+    KIA_WG_POS: 399.23735
     KIA_WG_POSITION: 399.24315
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.15234
     KIA_WG_VOLTAGE: 1.15236
   response: |-
     7E8105B62E021FE9FCE
@@ -337,10 +401,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 91.52435
     KIA_TURBO_BOOST: 1.2751
     KIA_WG_DUTY: 68.925
+    KIA_WG_POS: 0.64087
     KIA_WG_POSITION: 0.64088
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.15723
     KIA_WG_VOLTAGE: 1.15724
   response: |-
     7E8105B62E021FE9FCE
@@ -358,10 +426,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 93.95361
     KIA_TURBO_BOOST: 1.62745
     KIA_WG_DUTY: 68.8426
+    KIA_WG_POS: 396.27714
     KIA_WG_POSITION: 396.2829
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.16211
     KIA_WG_VOLTAGE: 1.16213
   response: |-
     7E8105B62E021FE9FCE
@@ -379,10 +451,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 94.2438
     KIA_TURBO_BOOST: 1.66954
     KIA_WG_DUTY: 68.39094
+    KIA_WG_POS: 393.37797
     KIA_WG_POSITION: 393.38369
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.12793
     KIA_WG_VOLTAGE: 1.12795
   response: |-
     7E8105B62E021FE9FCE
@@ -400,10 +476,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 88.53959
     KIA_TURBO_BOOST: 0.84218
     KIA_WG_DUTY: 68.00336
+    KIA_WG_POS: 1.20239
     KIA_WG_POSITION: 1.20241
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.12305
     KIA_WG_VOLTAGE: 1.12306
   response: |-
     7E8105B62E021FE9FCE
@@ -421,10 +501,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 88.53959
     KIA_TURBO_BOOST: 0.84218
     KIA_WG_DUTY: 68.63813
+    KIA_WG_POS: 396.69828
     KIA_WG_POSITION: 396.70405
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.12793
     KIA_WG_VOLTAGE: 1.12795
   response: |-
     7E8105B62E021FE9FCE
@@ -442,10 +526,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 88.57275
     KIA_TURBO_BOOST: 0.84699
     KIA_WG_DUTY: 74.02152
+    KIA_WG_POS: 5.13306
     KIA_WG_POSITION: 5.13313
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.37695
     KIA_WG_VOLTAGE: 1.37697
   response: |-
     7E8105B62E021FE9FCE
@@ -463,10 +551,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 89.18629
     KIA_TURBO_BOOST: 0.93598
     KIA_WG_DUTY: 71.19249
+    KIA_WG_POS: 388.80643
     KIA_WG_POSITION: 388.81209
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.19629
     KIA_WG_VOLTAGE: 1.19631
   response: |-
     7E8105B62E021FE9FCE
@@ -484,10 +576,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 91.73162
     KIA_TURBO_BOOST: 1.30516
     KIA_WG_DUTY: 72.49256
+    KIA_WG_POS: 396.11234
     KIA_WG_POSITION: 396.1181
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.18652
     KIA_WG_VOLTAGE: 1.18654
   response: |-
     7E8105B62E021FE9FCE
@@ -505,10 +601,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 97.38609
     KIA_TURBO_BOOST: 2.12531
     KIA_WG_DUTY: 69.19661
+    KIA_WG_POS: 393.37797
     KIA_WG_POSITION: 393.38369
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.16699
     KIA_WG_VOLTAGE: 1.16701
   response: |-
     7E8105B62E021FE9FCE
@@ -526,10 +626,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 87.27107
     KIA_TURBO_BOOST: 0.65818
     KIA_WG_DUTY: 68.93111
+    KIA_WG_POS: 0.80566
     KIA_WG_POSITION: 0.80568
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.15234
     KIA_WG_VOLTAGE: 1.15236
   response: |-
     7E8105B62E021FE9FCE
@@ -547,10 +651,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 88.87952
     KIA_TURBO_BOOST: 0.89148
     KIA_WG_DUTY: 71.76928
+    KIA_WG_POS: 0.60425
     KIA_WG_POSITION: 0.60426
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.18652
     KIA_WG_VOLTAGE: 1.18654
   response: |-
     7E8105B62E021FE9FCE
@@ -568,10 +676,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 89.02047
     KIA_TURBO_BOOST: 0.91192
     KIA_WG_DUTY: 72.07446
+    KIA_WG_POS: 0.79956
     KIA_WG_POSITION: 0.79957
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.25
     KIA_WG_VOLTAGE: 1.25002
   response: |-
     7E8105B62E021FE9FCE
@@ -589,10 +701,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 94.90708
     KIA_TURBO_BOOST: 1.76574
     KIA_WG_DUTY: 68.77546
+    KIA_WG_POS: 2.20337
     KIA_WG_POSITION: 2.2034
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.15234
     KIA_WG_VOLTAGE: 1.15236
   response: |-
     7E8105B62E021FE9FCE
@@ -610,10 +726,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 87.03063
     KIA_TURBO_BOOST: 0.62331
     KIA_WG_DUTY: 68.82734
+    KIA_WG_POS: 390.53983
     KIA_WG_POSITION: 390.54551
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.09375
     KIA_WG_VOLTAGE: 1.09377
   response: |-
     7E8105B62E021FE9FCE
@@ -631,10 +751,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 87.09696
     KIA_TURBO_BOOST: 0.63293
     KIA_WG_DUTY: 68.78767
+    KIA_WG_POS: 0.64087
     KIA_WG_POSITION: 0.64088
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.14258
     KIA_WG_VOLTAGE: 1.1426
   response: |-
     7E8105B62E021FE9FCE
@@ -652,10 +776,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 87.15499
     KIA_TURBO_BOOST: 0.64135
     KIA_WG_DUTY: 71.97681
+    KIA_WG_POS: 390.25297
     KIA_WG_POSITION: 390.25864
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.18652
     KIA_WG_VOLTAGE: 1.18654
   response: |-
     7E8105B62E021FE9FCE
@@ -673,10 +801,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 88.75516
     KIA_TURBO_BOOST: 0.87344
     KIA_WG_DUTY: 71.72656
+    KIA_WG_POS: 3.57056
     KIA_WG_POSITION: 3.57061
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.17188
     KIA_WG_VOLTAGE: 1.17189
   response: |-
     7E8105B62E021FE9FCE
@@ -694,10 +826,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 89.13654
     KIA_TURBO_BOOST: 0.92876
     KIA_WG_DUTY: 69.56893
+    KIA_WG_POS: 395.12357
     KIA_WG_POSITION: 395.12932
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.1377
     KIA_WG_VOLTAGE: 1.13771
   response: |-
     7E8105B62E021FE9FCE
@@ -715,10 +851,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 89.94906
     KIA_TURBO_BOOST: 1.04661
     KIA_WG_DUTY: 68.78767
+    KIA_WG_POS: 0.64087
     KIA_WG_POSITION: 0.64088
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.14258
     KIA_WG_VOLTAGE: 1.1426
   response: |-
     7E8105B62E021FE9FCE
@@ -736,10 +876,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 92.62705
     KIA_TURBO_BOOST: 1.43504
     KIA_WG_DUTY: 48.51148
+    KIA_WG_POS: 18.82936
     KIA_WG_POSITION: 18.82963
     KIA_WG_SETPOINT: 49.28054
+    KIA_WG_SP: 49.27982
+    KIA_WG_V: 1.16699
     KIA_WG_VOLTAGE: 1.16701
   response: |-
     7E8105B62E021FE9FCE
@@ -757,10 +901,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 95.73618
     KIA_TURBO_BOOST: 1.886
     KIA_WG_DUTY: 71.94934
+    KIA_WG_POS: 393.71366
     KIA_WG_POSITION: 393.71939
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.21582
     KIA_WG_VOLTAGE: 1.21584
   response: |-
     7E8105B62E021FE9FCE
@@ -778,10 +926,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 105.21279
     KIA_TURBO_BOOST: 3.26053
     KIA_WG_DUTY: 74.53727
+    KIA_WG_POS: 389.58158
     KIA_WG_POSITION: 389.58724
     KIA_WG_SETPOINT: 86.56138
+    KIA_WG_SP: 86.56012
+    KIA_WG_V: 1.38672
     KIA_WG_VOLTAGE: 1.38674
   response: |-
     7E8105B62E021FE9FCE
@@ -799,10 +951,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 86.88139
     KIA_TURBO_BOOST: 0.60166
     KIA_WG_DUTY: 74.21378
+    KIA_WG_POS: 0.79956
     KIA_WG_POSITION: 0.79957
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.38672
     KIA_WG_VOLTAGE: 1.38674
   response: |-
     7E8105B62E021FE9FCE
@@ -820,10 +976,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 87.49492
     KIA_TURBO_BOOST: 0.69065
     KIA_WG_DUTY: 27.34417
+    KIA_WG_POS: 1.46484
     KIA_WG_POSITION: 1.46487
     KIA_WG_SETPOINT: 3.12505
+    KIA_WG_SP: 3.125
+    KIA_WG_V: 1.27441
     KIA_WG_VOLTAGE: 1.27443
   response: |-
     7E8105B62E021FE9FCE
@@ -841,10 +1001,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 87.53638
     KIA_TURBO_BOOST: 0.69667
     KIA_WG_DUTY: 71.13146
+    KIA_WG_POS: 391.66898
     KIA_WG_POSITION: 391.67468
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.24512
     KIA_WG_VOLTAGE: 1.24514
   response: |-
     7E8105B62E021FE9FCE
@@ -862,10 +1026,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 87.75194
     KIA_TURBO_BOOST: 0.72793
     KIA_WG_DUTY: 69.28817
+    KIA_WG_POS: 0.60425
     KIA_WG_POSITION: 0.60426
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.15234
     KIA_WG_VOLTAGE: 1.15236
   response: |-
     7E8105B62E021FE9FCE
@@ -883,10 +1051,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 87.84314
     KIA_TURBO_BOOST: 0.74116
     KIA_WG_DUTY: 68.92805
+    KIA_WG_POS: 2.20337
     KIA_WG_POSITION: 2.2034
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.14746
     KIA_WG_VOLTAGE: 1.14748
   response: |-
     7E8105B62E021FE9FCE
@@ -904,10 +1076,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 87.92605
     KIA_TURBO_BOOST: 0.75319
     KIA_WG_DUTY: 70.37156
+    KIA_WG_POS: 0.64087
     KIA_WG_POSITION: 0.64088
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.19141
     KIA_WG_VOLTAGE: 1.19142
   response: |-
     7E8105B62E021FE9FCE
@@ -925,10 +1101,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 88.05871
     KIA_TURBO_BOOST: 0.77243
     KIA_WG_DUTY: 69.04097
+    KIA_WG_POS: 399.23735
     KIA_WG_POSITION: 399.24315
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.16211
     KIA_WG_VOLTAGE: 1.16213
   response: |-
     7E8105B62E021FE9FCE
@@ -946,10 +1126,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 89.42673
     KIA_TURBO_BOOST: 0.97085
     KIA_WG_DUTY: 69.44991
+    KIA_WG_POS: 396.31376
     KIA_WG_POSITION: 396.31952
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.16211
     KIA_WG_VOLTAGE: 1.16213
   response: |-
     7E8105B62E021FE9FCE
@@ -967,10 +1151,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 91.49948
     KIA_TURBO_BOOST: 1.27149
     KIA_WG_DUTY: 68.79988
+    KIA_WG_POS: 399.23735
     KIA_WG_POSITION: 399.24315
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.15234
     KIA_WG_VOLTAGE: 1.15236
   response: |-
     7E8105B62E021FE9FCE
@@ -988,10 +1176,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 97.13736
     KIA_TURBO_BOOST: 2.08923
     KIA_WG_DUTY: 59.3637
+    KIA_WG_POS: 377.03884
     KIA_WG_POSITION: 377.04433
     KIA_WG_SETPOINT: 63.07469
+    KIA_WG_SP: 63.07378
+    KIA_WG_V: 1.20117
     KIA_WG_VOLTAGE: 1.20119
   response: |-
     7E8105B62E021FE9FCE
@@ -1009,10 +1201,14 @@ test_cases:
     7E82CA025E029E01DC0
     7E82D1DAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 98.19031
     KIA_TURBO_BOOST: 2.24196
     KIA_WG_DUTY: 69.73373
+    KIA_WG_POS: 7.40357
     KIA_WG_POSITION: 7.40368
     KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.1377
     KIA_WG_VOLTAGE: 1.13771
   response: |-
     7E8105B62E021FE9FCE
