Update command data for Kia/Stinger

--- a/tests/test_cases/2020/command_support.yaml
+++ b/tests/test_cases/2020/command_support.yaml
@@ -161,6 +161,7 @@ supported_commands_by_ecu:
   - 7E0.7E8.22E002:KIA_INJ_DUR_1,KIA_INJ_DUR_2,KIA_INJ_DUR_3,KIA_INJ_DUR_4
   - 7E0.7E8.22E004:KIA_22E004,KIA_AUX_SOC,KIA_AUX_SOH
   - 7E0.7E8.22E00A:KIA_KNOCK_LEARN_1,KIA_KNOCK_LEARN_2,KIA_KNOCK_LEARN_3,KIA_KNOCK_LEARN_4,KIA_KNOCK_RETARD_1,KIA_KNOCK_RETARD_2,KIA_KNOCK_RETARD_3,KIA_KNOCK_RETARD_4
+  - 7E0.7E8.22E019:KIA_KNOCK_RETARD_1_E019,KIA_KNOCK_RETARD_2_E019,KIA_KNOCK_RETARD_3_E019,KIA_KNOCK_RETARD_4_E019
   - 7E0.7E8.22E021:KIA_TB_PRES,KIA_TURBO_BOOST,KIA_WG_DUTY,KIA_WG_POS,KIA_WG_POSITION,KIA_WG_SETPOINT,KIA_WG_SP,KIA_WG_V,KIA_WG_VOLTAGE
   - 7E0.7E8.22ED02:KIA_EOT_V2
   "7E1":
@@ -197,7 +198,17 @@ unsupported_commands_by_ecu:
   - 7E0.2221A0:KIA_ATF_TEMP
   - 7E0.7D8.2101
   - 7E0.7D8.2118:KIA_CVVT_T
+  - 7E0.7E8.2100:KIA_COOLANT_FAN_HIGH_SPEED,KIA_COOLANT_FAN_LOW_SPEED,KIA_FUEL_CUT,KIA_IDLE_CONTROL_MODE,KIA_KNOCK_DETECTED
   - 7E0.7E8.2101:KIA_COMMANDED_ENGINE_IDLE_RPM,KIA_CONTROL_MODULE_VOLTAGE,KIA_CONTROL_MODULE_VOLTAGE_AFTER_IGNITION,KIA_COOLANT_T_SENSOR_VOLTAGE,KIA_ENGINE_COOLANT_T,KIA_ENGINE_OIL_T,KIA_ENGINE_RPM,KIA_IAT_SENSOR_VOLTAGE,KIA_INTAKE_AIR_T,KIA_INTAKE_MANIFOLD_ABSOLUTE_PRESSURE,KIA_MAP_SENSOR_VOLTAGE,KIA_MIS_1,KIA_MIS_2,KIA_MIS_3,KIA_MIS_4
+  - 7E0.7E8.2102:KIA_COMMANDED_EVAPORATIVE_PURGE,KIA_FUEL_INJECTION_TIMING_1,KIA_FUEL_INJECTION_TIMING_2,KIA_FUEL_INJECTION_TIMING_3,KIA_FUEL_INJECTION_TIMING_4,KIA_OXYGEN_SENSOR_11,KIA_OXYGEN_SENSOR_21,KIA_VSS_V2_V2
+  - 7E0.7E8.2104:KIA_COOLANT_FAN_HIGH_SPEED__1_8_,KIA_COOLANT_FAN_LOW_SPEED__1_8_
+  - 7E0.7E8.210D:KIA_MIS_CNT_1,KIA_MIS_CNT_2,KIA_MIS_CNT_3,KIA_MIS_CNT_4,KIA_MIS_CNT_ALL,KIA_MIS_CNT_EMIS_1,KIA_MIS_CNT_EMIS_2,KIA_MIS_CNT_EMIS_3,KIA_MIS_CNT_EMIS_4
+  - 7E0.7E8.2113:KIA_BAROMETRIC_PRESSURE,KIA_TIMING_ADVANCE_1,KIA_TIMING_ADVANCE_2,KIA_TIMING_ADVANCE_3,KIA_TIMING_ADVANCE_4
+  - 7E0.7E8.2114:KIA_COMMANDED_THROTTLE_ACTUATOR,KIA_COOLANT_FAN__PWM_,KIA_RELATIVE_ACCELERATOR_PEDAL_POSITION,KIA_RELATIVE_ACCELERATOR_PEDAL_POSITION_VOLTAGE,KIA_REQUESTED_TORQUE,KIA_THROTTLE_POSITION_SENSOR_VOLTAGE__1,KIA_THROTTLE_POSITION_SENSOR_VOLTAGE__2,KIA_THROTTLE_POSITION__1,KIA_THROTTLE_POSITION__2
+  - 7E0.7E8.2115:KIA_STFT_B1,KIA_STFT_B1_IDLE
+  - 7E0.7E8.2116:KIA_KNOCK_RETARD_CYLINDER_1,KIA_KNOCK_RETARD_CYLINDER_2,KIA_KNOCK_RETARD_CYLINDER_3,KIA_KNOCK_RETARD_CYLINDER_4
+  - 7E0.7E8.2117:KIA_INTAKE_CAMSHAFT_POSITION_ACTUAL,KIA_INTAKE_CAMSHAFT_POSITION_COMMANDED
+  - 7E0.7E8.211D:KIA_MIS_1_V2,KIA_MIS_2_V2,KIA_MIS_3_V2,KIA_MIS_4_V2,KIA_MIS_CAT_1,KIA_MIS_CAT_2,KIA_MIS_CAT_3,KIA_MIS_CAT_4
   "7E1":
   - 7E1.7E9.011C
   - 7E1.7E9.21A0:KIA_ATF_T,KIA_GEAR,KIA_VSS_V3
